# Fluid

./: README.md
contract/: .gitignore  Anchor.toml  package.json
contract/IDLs/: exchange_price.ts  juplend.json  kamino-farm.json  kamino-lending-vault.json  (+1 more)
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: constants.rs  errors.rs  events.rs  lib.rs
contract/programs/contract/src/helpers/: calculate_shares_to_mint.rs  calculate_total_asset_balance.rs  calculate_usdc_for_shares.rs  deposit_to_juplend.rs  deposit_to_kamino.rs  get_juplend_balance.rs  get_kamino_balance.rs  kamino_account_reader.rs  mod.rs  rebalance_allocation.rs  token_reserve_helper.rs  withdraw_from_kamino.rs  withdraw_from_protocols.rs
contract/programs/contract/src/helpers/juplend/: deposit_to_juplend.rs  get_juplend_balance.rs  mod.rs  token_reserve_helper.rs  withdraw_from_juplend.rs
contract/programs/contract/src/helpers/kamino/: deposit_to_kamino.rs  get_kamino_balance.rs  get_kamino_farm_active_balance.rs  kamino_account_reader.rs  mod.rs  user_state_helper.rs  withdraw_from_kamino.rs
contract/programs/contract/src/instructions/: deposit.rs  init_aggregator_config.rs  mod.rs  rebalance.rs  update_strategy.rs  view.rs  withdraw.rs
contract/programs/contract/src/states/: aggregator_config.rs  mod.rs
contract/programs/contract/src/states/juplend/: lending.rs  lending_rewards_rate_model.rs  mod.rs  token_reserve.rs
contract/programs/contract/src/states/kamino/: fraction_extras.rs  mod.rs  reserve.rs  reserve_accounts.rs  user_state.rs  vault_state.rs
(+1 files in other folders)
